infra層のテストが不足していたので追加